# Astview

./: .gitignore  .travis.yml  CHANGES  INSTALL  LICENSE  README  README.md  Setup.hs  TODO  astview.cabal  stack-7.10.2.yaml  stack-7.8.4.yaml  stack.yaml
data/: CsvParser.hs  EX1.hs.txt  EX2.hs.txt  EX3.hs.txt  EX4.hs.txt  EX5.hs.txt  ExprParser.hs  HaskellParser.hs  HigherOrderParse.hs  Parsers.hs  Term2tree.hs  astview-tmpl.html  astview.glade  astview.html  astview.xml  menu.xml
data/.svn/: dir-prop-base  entries
data/.svn/text-base/: CsvParser.hs.svn-base  ExprParser.hs.svn-base  HaskellExtParser.hs.svn-base  Parsers.hs.svn-base  astview.glade.svn-base
data/Langs/: .Csv.hs.swp  .Expr.hs.swp  .Haskell.hs.swp  .Languages.hs.swp  Csv.hs  Expr.hs  Haskell.hs  Languages.hs
data/Test/.svn/: entries
data/Test/.svn/text-base/: CsvParser.hs.svn-base
src/: Haskell.hs  Main.hs
src/.svn/: dir-prop-base  entries
src/Language/.svn/: entries
src/Language/Astview/: DataTree.hs  GUI.hs  GUIActions.hs  GUIData.hs  Language.hs  Languages.hs  Registry.hs  SourceLocation.hs
src/Language/Astview/.svn/: entries
src/Language/Astview/.svn/text-base/: .GUI.hs.swp.svn-base  Registry.hs.svn-base
src/core/: Python.hs
src/core/Language/Astview/: DataTree.hs  Language.hs  Languages.hs  Pathlist.hs  SmallestSrcLocContainingCursor.hs
src/core/Language/Astview/Languages/: Haskell.hs  HaskellCore.hs  Python.hs
src/gui/: Main.hs
src/gui/Language/Astview/: GUI.hs  GUIActions.hs  GUIData.hs
src/gui/Language/Astview/Gui/: Actions.hs  GtkActions.hs  Init.hs  Menu.hs  Types.hs
test/: DataTree.hs  Main.hs  SmallestSrcLocContainingCursor.hs  SourceLocation.hs
