Name:            astview
Version:         0.3
License:         BSD4
License-File:    LICENSE
Author:          
                 Pascal Hof <pascal.hof@udo.edu>, 
                 Sebastian Menge <sebastian.menge@udo.edu>
Maintainer:      Sebastian Menge <sebastian.menge@udo.edu>
Synopsis:        A GTK-based abstract syntax tree viewer for custom 
                 languages and parsers
Description:     
                 Astview is a graphical viewer for abstract 
                 syntax trees. It is implemented on the basis 
                 of scrap-your-boilerplate (i.e. data2tree) 
                 and works with all parsers that generate trees 
                 that are instances of the Data.Data class. 
                 Custom parsers can be dynamically loaded 
                 (via package hint) at startup.
                 .
                 For installation you need gtk2hs and hscolour before. 
                 The latter will not be automatically installed by 
                 cabal since it is used by Setup.hs.

Category:        Language

Cabal-Version:   >= 1.8
Build-Type:      Simple 
Tested-with:     GHC==7.6.1
Data-Files:
                 data/astview.glade
Library
  Hs-Source-Dirs:  src
  Exposed-Modules: Language.Astview.Language
                   Language.Astview.SourceLocation
                   Language.Astview.DataTree
                   Language.Astview.Languages
                   Language.Astview.GUIData
  Build-Depends:     base == 4.6.0.0
                   , containers == 0.5.0.0
                   , gio == 0.12.4
                   , haskell-src-exts == 1.13.5
                   , syb == 0.3.7
                   , syz == 0.2.0.0
                   , gtksourceview2 == 0.12.3.1
                   , gtk == 0.12.4
  extensions:      FlexibleInstances,
                   DeriveDataTypeable

Executable         astview
  Hs-Source-Dirs:  src
  Main-is:         Main.hs
  GHC-Options:     -Wall -fno-warn-unused-do-bind -fno-warn-wrong-do-bind
  Other-Modules:   Language.Astview.GUI
  extensions:      TemplateHaskell,
                   FlexibleInstances,
                   DeriveDataTypeable

  Build-Depends:   base == 4.6.0.0
                   , filepath == 1.3.0.1
                   , bytestring == 0.10.0.0
                   , Glob == 0.7.2
                   , containers == 0.5.0.0
                   , syb == 0.3.7
                   , syz == 0.2.0.0
                   , glib == 0.12.4
                   , gtk == 0.12.4
                   , glade == 0.12.1
                   , gtksourceview2 == 0.12.3.1
                   , directory == 1.2.0.0
                   , mtl ==2.1.2
                   , hscolour == 1.20.3
                   , haskell-src-exts == 1.13.5

test-suite basic
    type: exitcode-stdio-1.0
    Hs-Source-Dirs: test 
    main-is: Main.hs
    build-depends: base == 4.6.0.0, 
                   astview == 0.3,
                   containers == 0.5.0.0,
                   test-framework == 0.8, 
                   test-framework-hunit == 0.3.0,
                   HUnit == 1.2.5.1 

